# ogaden

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README-PT.md  README.md  broker.py  config.py  dashboard.py  docker-compose-portainer.yml  docker-compose.yml  engine.py  loader.py  ogaden.py  pyproject.toml  requirements.txt  temp1.py  trader.py
.github/workflows/: docker.yml
docker/: .dockerignore
docker/dashboard/: Dockerfile
docker/engine/: Dockerfile
make/: docker-build.sh  docker-push.sh  lint.sh  setup.sh
ogaden/: __init__.py  analysis.py  broker.py  dashboard.py  engine.py  errors.py  exchange.py  healthcheck.py  indicators.py  loader.py  metrics.py  persistence.py  rate_limiter.py  retry.py  strategy.py  trader.py
ogaden/templates/: dashboard.html
res/dashboard/: dockerfile
res/engine/: dockerfile  requirements.txt
resources/: dashboard.dockerfile  dashboard.requirements.txt  engine.dockerfile
src/: broker.py  loader.py  ogaden.py  trader.py
src/templates/: dashboard.html
tests/: conftest.py  test_broker.py  test_errors.py  test_indicators.py  test_integration.py  test_loader.py  test_persistence.py  test_retry.py  test_strategy.py  test_trader.py
